user profile modification wip, modify informations wip

--- a/client/front/index.html
+++ b/client/front/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="app"></div>
+<!--    <script src="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.js"></script>    &lt;!&ndash;here&ndash;&gt;-->
     <script type="module" src="./src/main.js"></script>
+
   </body>
 </html>
